--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,19 @@
+[build-system]
+requires = ["click"]
+build-backend = "click"
+
 [project]
 name = "angry_api"
 version = "1.0.0"
 description = "CLI for running Angry API web application"
+readme = "README.md"
+authors = [{name = "Ilgiz Duseev", email = "ilgiz.duseev@yandex.ru" }]
 requires-python = ">=3.11"
 dependencies = [
     python = "^3.12",
     aiohttp = "^3.9.5",
     "click>=8.1",
 ]
-authors = ["Ilgiz Duseev <ilgiz.duseev@yandex.ru>"]
 
 [project.scripts]
-run_server = "cli:run_server"
-
-[build-system]
-requires = ["click"]
-build-backend = "click"
+run_server = "backend.cli:run_server"
