Fixes in app.py, cli.py modules; Added ENTRYPOINT and fixed CMD command in Dockerfile; Added __main__.py module for /backend to become a package; Removed requirements from requirements.in into pyproject.toml; Working on tests in test_app module; Added links in README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,14 @@ authors = [{ name = "Ilgiz Duseev", email = "ilgiz.duseev@yandex.ru" }]
 license = {text = "MIT License"}
 requires-python = ">=3.11"
 dependencies = [
-    "click>=8.1",
-    "aiohttp>=3.9.5",
+    "click>=8",
+    "aiohttp>=3",
+]
+[project.optional-dependencies]
+test = [
+    "pytest",
+    "pytest-aiohttp",
+    "pytest-asyncio"
 ]
 
 [project.scripts]
